#2004 Eliminar codi antic i funcionalitat no mantinguda.
Eliminar interfície 2.6

- Simplificar arxius CSS que s’usen tant en la interfície antiga 2.6 com
en l’actual 3.3.
- Llevada "/v3" dels controladors